project('vkquake', 'c',
  version : '1.0',
  default_options : ['warning_level=3'])

# vkDep = dependency('vulkan')
vkDep = dependency('vulkan')
sdlDep = dependency('SDL2')
incdir = include_directories('../Shaders')

metalDep = dependency('Metal')
ioSurfDep = dependency('IOSurface')
quartzDep = dependency('QuartzCore')
iokitDep = dependency('IOKit')
foundationDep = dependency('Foundation')
appleDeps = [metalDep, iokitDep, iokitDep, quartzDep, foundationDep]

executable('vkquake',
           'common.c',
           'pr_cmds.c',
           'gl_screen.c',
           'gl_model.c',
           'snd_mix.c',
           'r_alias.c',
           'snd_dma.c',
           'snd_wave.c',
           'cl_parse.c',
           'strlcpy.c',
           'cd_sdl.c',
           'menu.c',
           'gl_fog.c',
           'snd_mpg123.c',
           'snd_codec.c',
           'gl_mesh.c',
           'sv_main.c',
           'pr_edict.c',
           'world.c',
           'net_dgrm.c',
           'sbar.c',
           'cl_input.c',
           'net_main.c',
           'sv_phys.c',
           'pl_linux.c',
           'image.c',
           'gl_vidsdl.c',
           'net_bsd.c',
           'snd_mp3.c',
           'cmd.c',
           'gl_sky.c',
           'cl_main.c',
           'chase.c',
           'zone.c',
           'snd_vorbis.c',
           'sv_move.c',
           'console.c',
           'gl_rmisc.c',
           'keys.c',
           'host_cmd.c',
           'snd_xmp.c',
           'r_part.c',
           'gl_texmgr.c',
           'r_sprite.c',
           'host.c',
           'net_udp.c',
           'main_sdl.c',
           'snd_flac.c',
           'in_sdl.c',
           'bgmusic.c',
           'gl_draw.c',
           'sys_sdl_unix.c',
           'net_loop.c',
           'gl_refrag.c',
           'mathlib.c',
           'snd_mikmod.c',
           'pr_exec.c',
           'snd_mp3tag.c',
           'snd_sdl.c',
           'r_brush.c',
           'crc.c',
           'gl_rmain.c',
           'strlcat.c',
           'cfgfile.c',
           'cl_demo.c',
           'cvar.c',
           'gl_rlight.c',
           'snd_mem.c',
           'sv_user.c',
           'wad.c',
           'view.c',
           'snd_umx.c',
           'snd_opus.c',
           'gl_warp.c',
           'r_world.c',
           'cl_tent.c',
           'gl_heap.c',
           '../Shaders/Compiled/alias_alphatest_frag.c',
           '../Shaders/Compiled/alias_frag.c',
           '../Shaders/Compiled/alias_vert.c',
           '../Shaders/Compiled/basic_alphatest_frag.c',
           '../Shaders/Compiled/basic_frag.c',
           '../Shaders/Compiled/basic_notex_frag.c',
           '../Shaders/Compiled/basic_vert.c',
           '../Shaders/Compiled/cs_tex_warp_comp.c',
           '../Shaders/Compiled/postprocess_frag.c',
           '../Shaders/Compiled/postprocess_vert.c',
           '../Shaders/Compiled/screen_warp_comp.c',
           '../Shaders/Compiled/screen_warp_rgba8_comp.c',
           '../Shaders/Compiled/showtris_frag.c',
           '../Shaders/Compiled/showtris_vert.c',
           '../Shaders/Compiled/sky_layer_frag.c',
           '../Shaders/Compiled/sky_layer_vert.c',
           '../Shaders/Compiled/world_frag.c',
           '../Shaders/Compiled/world_vert.c',
           dependencies :  [vkDep, sdlDep] + appleDeps,
	   include_directories : incdir,
           install : true)
